# Ambiente-Gitpod

./: CMakeLists.txt  cliente.cpp  cliente.py  notas.proto  servidor.cpp  servidor.py
